fix(range): realign input range thumb margin on Webkit

--- a/scss/forms/_form-range.scss
+++ b/scss/forms/_form-range.scss
@@ -34,7 +34,7 @@
     box-sizing: content-box; // Boosted mod
     width: $form-range-thumb-width;
     height: $form-range-thumb-height;
-    margin-top: ($form-range-track-height - $form-range-thumb-height) * .5; // Webkit specific
+    margin-top: subtract(($form-range-track-height - $form-range-thumb-height) * .5, $form-range-thumb-focus-box-shadow-width); // Webkit specific // Boosted mod
     cursor: grab; // Boosted mod
     @include gradient-bg($form-range-thumb-bg);
     border: $form-range-thumb-border;
